# pyclaude-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: deploy.json.example  settings.local.json.example
.claude/agents/: code-quality-validator.md  code-reviewer.md  docs-updater.md  review-responder.md
.claude/hooks/: auto-format.sh
.claude/rules/: architecture-review.md  code-quality-review.md
.github/workflows/: ci.yml
docs/: DECISIONS.md
src/pyclaude_forge/: __init__.py  cli.py  installer.py
src/pyclaude_forge/data/: CLAUDE.md  DEVELOPMENT_PROCESS.md  settings.json
src/pyclaude_forge/data/agents/: pr-writer.md  test-coverage-validator.md
src/pyclaude_forge/data/rules/: performance-review.md  test-review.md
src/pyclaude_forge/data/skills/design/: SKILL.md
src/pyclaude_forge/data/skills/done/: SKILL.md
src/pyclaude_forge/data/skills/landed/: SKILL.md
src/pyclaude_forge/data/skills/sync/: SKILL.md
tests/: conftest.py  test_agents.py  test_cli.py  test_installer.py  test_rules.py  test_skills.py
