[project]
name = "claude-code-harness"
version = "0.1.0"
description = "Portable Claude Code workflow for Python projects"
requires-python = ">=3.10"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pyright]
pythonVersion = "3.10"
