[project]
name = "pyclaude-forge"
version = "0.1.0"
description = "Installable Claude Code workflow for Python projects"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
pyclaude-forge = "pyclaude_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyclaude_forge"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pyright]
pythonVersion = "3.10"
